// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.access;

import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.internal.access";
option java_multiple_files = true;
option java_outer_classname = "PrincipalProto";

message Principal {
  string principal_resource_id = 1;

  // An OAuth user identity.
  message OAuthUser {
    // OAuth issuer identifier. Required.
    string issuer = 1;

    // OAuth subject identifier. Required.
    string subject = 2;
  }

  message TlsClient {
    // Authority key identifier (AKID). Required.
    bytes authority_key_identifier = 1;
  }

  // Identity. Required.
  oneof identity {
    OAuthUser user = 2;
    TlsClient tls_client = 3;
  }

  // Create time. Output-only.
  //
  // Not specified when `tls_client` is set.
  google.protobuf.Timestamp create_time = 4;

  // Update time. Output-only.
  //
  // Not specified when `tls_client` is set.
  google.protobuf.Timestamp update_time = 5;
}
